<resources>
    <string name="app_name">FoodAppChallenge3</string>
    <string name="location">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang,</string>
    <string name="add_to_cart" formatted="false">Tambah ke Keranjang - Rp%d</string>
    <string name="nasi">Nasi</string>
    <string name="rp_80000">Rp.80000</string>
    <string name="lokasi">lokasi</string>
    <string name="add_to_price">Tambah ke Keranjang - Rp. 80000</string>
    <string name="total_qty">x%s</string>
    <string name="txt_ayam_goyeng">Ayam Goyeng</string>
    <string name="txt_no_telp">0812345678910</string>
    <string name="txt_greetings">Hi </string>
    <string name="error_empty">Anda Belum Memesan Apapun</string>
    <string name="txt_greetings_2">Mau makan apa hari ini ?</string>
    <string name="txt_discount">DISKON 20%</string>
    <string name="txt_under_discount">pesan makanan lewat aplikasi dan dapatkan diskonmu</string>
    <string name="txt_list_food">List Menu Makanan</string>
    <string name="title_tab_home">home</string>
    <string name="title_tab_cart">cart</string>
    <string name="title_tab_profile">profile</string>
    <string name="txt_here">here</string>
    <string name="txt_error_password_empty">Password tidak boleh kosong !</string>
    <string name="txt_error_email_empty">Email tidak boleh kosong !</string>
    <string name="txt_error_email_invalid">Penulisan email tidak sesuai format !</string>
    <string name="txt_error_password_less_than_8_char">Password tidak boleh kurang dari 8 karakter !</string>
    <string name="register_here">Register here</string>
    <string name="txt_password_not_matches">Password yg dimasukkan tidak sama !</string>
    <string name="txt_cart">Keranjang</string>
    <string name="txt_checkout">Pesan</string>
    <string name="txt_total_price">Total Harga</string>
    <string name="txt_note">Note</string>
    <string name="txt_0">0</string>
    <string name="txt_mie_jumbo_naruto">Mie Jumbo Naruto</string>
    <string name="txt_price">IDR 5000</string>
    <string name="txt_price_total">IDR 1500000</string>
    <string name="txt_tidak_ada_data">Tidak ada data</string>
    <string name="txt_login">Login</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_email">Email</string>
    <string name="txt_name">Name</string>
    <string name="txt_password">Password</string>
    <string name="txt_already_have_an_account_click_here">Already have an account? click here</string>
    <string name="txt_button_register">Register</string>
    <string name="txt_change">Change</string>
    <string name="txt_back_to_cart">Kembali ke keranjang</string>
    <string name="txt_konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="txt_ambil_sendiri">Ambil Sendiri</string>
    <string name="txt_dikirim">Dikirim</string>
    <string name="txt_tunai">Tunai</string>
    <string name="txt_e_wallet">E-Wallet</string>
    <string name="txt_pesan">Pesan</string>
    <string name="txt_total_pembayaran">Total Pembayaran</string>
    <string name="txt_cek_pesanan">Cek Pesanan</string>
    <string name="txt_metode_pembayaran">Metode Pembayaran</string>
    <string name="txt_metode_pengiriman">Metode Pengiriman</string>
    <string name="txt_zero">0</string>
    <string name="txt_idr_50000">IDR 50000</string>
    <string name="txt_rename">Rename</string>
    <string name="txt_logout">Log Out</string>
    <string name="iv_profile_picture">Profile Picture</string>
    <string name="txt_profile">Profile</string>

</resources>