<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".presentation.detailmenu.DetailMenuActivity">
    <ImageView
        android:id="@+id/ib_arrow_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:src="@drawable/iv_ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_img_menu_item_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="@id/ib_arrow_back"
        app:layout_constraintTop_toTopOf="@id/cl_menu_detail"
        tools:src="@drawable/iv_fried_rice"
        tools:ignore="ContentDescription" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_menu_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/cv_location"
        app:layout_constraintTop_toBottomOf="@id/iv_img_menu_item_detail">

        <LinearLayout
            android:id="@+id/ll_menu_name_and_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/tv_menu_desc"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_menu_name"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="Nasi Goreng" />

            <TextView
                android:id="@+id/tv_menu_price"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/rp_80000" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_menu_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="4"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_menu_name_and_price"
            tools:text="Nasi goreng adalah makanan khas" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/cl_amount"
        app:layout_constraintTop_toBottomOf="@id/cl_menu_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_location_img"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/iv_ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/ll_location_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_location_img"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lokasi"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_location_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:maxLines="4"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="Jalan Pemuda No 99" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_amount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/view_line_2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/btn_add_to_cart"
            app:layout_constraintTop_toBottomOf="@id/view_line_2">


            <ImageView
                android:id="@+id/ic_minus"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/iv_ic_minus"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_counting"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="0"
                android:textColor="@color/black" />
            <ImageView
                android:id="@+id/ic_add"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/iv_ic_add"
                tools:ignore="ContentDescription" />



        </LinearLayout>
        <Button
            android:id="@+id/btn_add_to_cart"
            style="@style/Widget.AppCompat.ImageButton"
            android:theme="@style/Theme.Material3.DynamicColors.DayNight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_calculate"
            tools:text="@string/add_to_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
